--- a/public/index.html
+++ b/public/index.html
@@ -6,15 +6,12 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
   <link rel="icon" href="<%= BASE_URL %>favicon.ico">
+  <script src="//at.alicdn.com/t/font_697838_e68c1d27iimmfgvi.js"></script>
   <title>web-test</title>
 </head>
 
 <body>
-  <noscript>
-    <strong>We're sorry but vue-cli-3.x doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
-  </noscript>
   <div id="app"></div>
-  <!-- built files will be auto injected -->
 </body>
 
 </html>
